--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main class="home-main">
         <section>
-            <p class="home-main-tex">Conoce las novedades y noticias del Mundo Tech</p>
+            <p class="home-main-text">Conoce las novedades y noticias del Mundo Tech</p>
             <button class="home-main-button">
                 <a href="blogs.html">Entra ya!</a>
             </button>
