--- a/blogs.html
+++ b/blogs.html
@@ -35,16 +35,16 @@
                 <div class="blogs-news-img-container">
                     <img src="" alt="">
                 </div>
+                <div class="blogs-news-info-container">
+                    <h2>Titulo del blogpost
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At autem voluptates ad, eius impedit sit, aliquam eaque labore facere voluptatibus repellendus dolor dignissimos, expedita ipsam est? Corrupti dicta modi hic?
+                    </p>
+                    <a href="" class="blogs-button"></a>
+                </div>
             </div>
-            <div class="blogs-news-info-container">
-                <h2>
-
-                </h2>
-                <p>
-
-                </p>
-                <a href="" class="blogs-button"></a>
-            </div>
+            
         </section>
         <section class="blogs-posts-container">
             <div>
