--- a/blog.html
+++ b/blog.html
@@ -30,16 +30,16 @@
     </header>
     <main>
         <section class="grid-container blogpost-img-container">
-            <img src="" alt="">
+            <img src="assets/img/post-1.png" alt="">
         </section>
         <section class="blogpost-main-container">
             <div class="grid-container">
-                <h3></h3>
+                <h3>Noticias</h3>
                 <article>
-                    <h1></h1>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h1>Titulo del Blogpost</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, enim harum eveniet, quos, corporis ea unde omnis ad aliquam culpa ut cumque dolorum voluptate facilis at accusamus consequatur quibusdam. Recusandae!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit maxime impedit nihil fuga architecto incidunt. Eveniet perspiciatis repudiandae at assumenda. Nobis perferendis dolorem ullam repellat eius quia cupiditate reiciendis quasi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex id tempora consequatur unde, iusto provident adipisci suscipit quasi velit amet vitae quia commodi hic quos nam similique a in asperiores?</p>
                 </article>
             </div>
         </section>
