--- a/perfil.html
+++ b/perfil.html
@@ -30,23 +30,31 @@
     </header>
     <main>
         <section class="profile-main-container">
-            <div class="grad-container">
+            <div class="grid-container profile-container">
                 <div>
-                    <img src="" alt="">
+                    <img src="assets/img/profile-pic.jpg" alt="">
                 </div>
-            </div>
-            <div>
-                <h2></h2>
-                <p></p>
+                <div>
+                    <h2>Hola, mi nombre es Diego De Granda!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dicta reprehenderit harum reiciendis doloremque nesciunt molestias nisi voluptatum. Voluptate sed repellat quisquam esse obcaecati, alias dolorum nobis minus? Cupiditate, laboriosam.</p>
+                </div>
             </div>
         </section>
         <section class="profile-main-projects">
             <div class="grid-container">
-                <h3></h3>
+                <h3>Proyectos</h3>
                 <div class="projects-main-container">
                     <article class="project-container">
-                        <h4></h4>
-                        <p></p>
+                        <h4>Titulo</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae assumenda aliquam quasi earum voluptas consectetur harum est, omnis tempore, expedita voluptatibus cumque unde ratione pariatur ut, excepturi id reprehenderit inventore!</p>
+                    </article>
+                    <article class="project-container">
+                        <h4>Titulo</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae assumenda aliquam quasi earum voluptas consectetur harum est, omnis tempore, expedita voluptatibus cumque unde ratione pariatur ut, excepturi id reprehenderit inventore!</p>
+                    </article>
+                    <article class="project-container">
+                        <h4>Titulo</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae assumenda aliquam quasi earum voluptas consectetur harum est, omnis tempore, expedita voluptatibus cumque unde ratione pariatur ut, excepturi id reprehenderit inventore!</p>
                     </article>
                 </div>
             </div>
